@@ -21,6 +21,9 @@ configurations {
 repositories {
 	mavenCentral()
 }
+tasks.withType(JavaCompile) {
+	options.compilerArgs += ["--enable-preview"]
+}
 
 dependencies {
 	//Spring Boot
